--- a/.README.MD
+++ b/.README.MD
@@ -3,8 +3,8 @@
 ## pasos y funciones:
 arranca descargando la info desde la api del earthdata
 
-la idea es que descarga tile by tile para mod y luego para myd en la raiz del doownloader. 
+la idea es que descarga tile by tile para mod y luego para myd en la raiz del downloader. 
 
 Luego usa una función mxd yc_mxd generation!. esta función lo que realiza es el mosaico para mosiquear los tiles por separado y aparte transforma a datos binarios de nieve y nubes	
 
-luego de esto yo voy a agregar una función para que me mosaique los datos y los mande a una carpeta diferente! para ver que onda !!!	
+luego de esto yo voy a agregar una función para que me mosaiquee los datos y los mande a una carpeta diferente! para ver que onda !!!	
