--- a/.Readme.md
+++ b/.Readme.md
@@ -1,12 +1,9 @@
 ### readme  SIRIS Snow
  
- This product show the Snow Cover Area in the principal spots of the Andes Range
+Este producto muestra la distribución de la cubierta nival para la Cordillera de Los Andes
+El area seleccionada en el rango de trabajo correspode a un área de buffer de 75 km relacionada a los principales glaciares monitoreados por el World Glacier Monitoring System.
  
- The selected area correspond to a 75 km buffer of the principal glaciers sensed by the World Glacier Monitoring Sistem. 
- 
-structure of runner
-necestio generar un archivo que se llame: 
-.usr, dde tenga esta estructura 
-usuario
-contraseña
+Estructura
+Todas las imágenes descargadas se van a almacenar en el directorio modis, que se encuentra/genera de no existir, dentro de la carpeta del programa. Si es necesario cambiar la ubicación de este directorio, es posible hacerlo cambiando las direcciones dentro del archivo de configuración, pero siempre los subirectorios deberán estar en una carpeta "modis" que los contenga".dir.txt"
 
+El sistema comienza pidiendo el usuario y la contraseña (la primera vez que corre)
