cambios en el procesamiento de los nombres

--- a/.README.MD
+++ b/.README.MD
@@ -1,4 +1,11 @@
 ## sistema para descarga y preprocesamiento de datos de nieve y otros
+ 
+Este producto muestra la distribución de la cubierta nival para la Cordillera de Los Andes
+El area seleccionada en el rango de trabajo correspode a un área de buffer de 75 km relacionada a los principales glaciares monitoreados por el World Glacier Monitoring System.
+ 
+Estructura
+Todas las imágenes descargadas se van a almacenar en el directorio modis, que se encuentra/genera de no existir, dentro de la carpeta del programa. Si es necesario cambiar la ubicación de este directorio, es posible hacerlo cambiando las direcciones dentro del archivo de configuración, pero siempre los subirectorios deberán estar en una carpeta "modis" que los contenga".dir.txt"
+El sistema comienza pidiendo el usuario y la contraseña (la primera vez que corre)
 
 ## pasos y funciones:
 arranca descargando la info desde la api del earthdata
@@ -8,3 +15,11 @@ la idea es que descarga tile by tile para mod y luego para myd en la raiz del do
 Luego usa una función mxd yc_mxd generation!. esta función lo que realiza es el mosaico para mosiquear los tiles por separado y aparte transforma a datos binarios de nieve y nubes	
 
 luego de esto yo voy a agregar una función para que me mosaiquee los datos y los mande a una carpeta diferente! para ver que onda !!!	
+
+
+Programas que necesito instalados en el sistema: 
+R-base
+Paquetes de R que necesito instalados de base en el sistema: 
+"raster"
+"rgeos"
+"sp"
